2000-07-27  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-07-27 Kai Lahmann <kl@linuxfaqs.de>

	* de.po: Added German translation

2000-07-27  Fatih Demir	<kabalak@gmx.net>

	* .cvsignore: The usual delirium.

	* *.po: Added the included po-files from
		galeon 0.7.1.

2000-07-26  Fatih Demir	<kabalak@gmx.net>

	* galeon.pot: Added the pot-file from 0.7.1.

	* INFO: Added this file witht he hopefully right
		person for galeon.