@@ -1,3 +1,7 @@
+2000-07-30  Fatih Demir	<kabalak@gmx.net>
+
+	* merge-po.sh: Added this merger script.
+
 2000-07-27  Valek Filippov  <frob@df.ru>
 
 	* ru.po: updated russian translation.
